# fastapi_journalblog

./: .env.example  Dockerfile  README.md  compose.yml  config.py  main.py  pyproject.toml  structure.md
nginx/: nginx.conf
src/api_v1/crud/: demo_auto_crud.py
src/api_v1/routers/: article_router.py  category_router.py  tag_router.py  user_router.py
src/api_v1/schemas/: article_schema.py  category_schema.py  tag_schema.py  user_schema.py
src/db/: association_tables.py  database.py  models.py
src/demo_auth/: crud.py  demo_jwt_auth.py  helpers.py  validation.py
tests/: redis.py
