[project]
name = "fastapi-journalblog"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavlov Danil",email = "danpavkzn@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite (==0.21.0)",
    "alembic (==1.14.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.7.0)",
    "argon2-cffi (==23.1.0)",
    "argon2-cffi-bindings (==21.2.0)",
    "asyncpg (==0.30.0)",
    "bcrypt (==4.2.1)",
    "black (==25.1.0)",
    "cffi (==1.17.1)",
    "click (==8.1.8)",
    "colorama (==0.4.6)",
    "cryptography (==44.0.0)",
    "dnspython (==2.7.0)",
    "email-validator (==2.2.0)",
    "fastapi (==0.115.6)",
    "greenlet (==3.1.1)",
    "h11 (==0.14.0)",
    "idna (==3.10)",
    "jinja2 (==3.1.5)",
    "makefun (==1.15.6)",
    "mako (==1.3.8)",
    "markupsafe (==3.0.2)",
    "mypy-extensions (==1.0.0)",
    "packaging (==24.2)",
    "passlib (==1.7.4)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.6)",
    "pwdlib (==0.2.1)",
    "pycparser (==2.22)",
    "pydantic (==2.10.4)",
    "pydantic-settings (==2.7.0)",
    "pydantic-core (==2.27.2)",
    "pyjwt (==1.7.0)",
    "python-dotenv (==1.0.1)",
    "python-multipart (==0.0.20)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.36)",
    "starlette (==0.41.3)",
    "typing-extensions (==4.12.2)",
    "uvicorn (==0.34.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
